[package]
name = "layer-painter-wasm"
version = "0.8.0"
description = "A simple app for drawing imags of multiple layers, built with yew & tauri."
authors = ["IceyBlackTea <IceyBlackTea@outlook.com>"]
license = "GPL"
repository = "https://github.com/IceyBlackTea/layer-painter"
edition = "2021"

[dependencies]
yew = "0.19"
js-sys = "0.3"
wasm-logger = "0.2"
log = "0.4"
futures = "0.3.4"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.28"
gloo-utils = "0.1"
gloo-dialogs = "0.1"
serde = "1"
serde_json = "1.0"

[dependencies.gloo-file]
version = "0.2"
features = ["futures"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Blob",
    "CanvasRenderingContext2d",
    "DataTransfer",
    "DragEvent",
    "Event",
    "File",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlLabelElement",
    "ImageBitmap",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window"
]
